ShakeCharity/ShakeSharityApp/force-app/main/default/objects/CnP_PaaS__Invoice__c/CnP_PaaS__Invoice__c.object-meta.xml
<CustomObject>
    <label>C&amp;P Invoice</label>
    <nameField>
        <label>C&amp;P Invoice Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>C&amp;P Invoice</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>