ShakeCharity/ShakeSharityApp/force-app/main/default/objects/CnP_PaaS__Invoice__c/fields/CnP_PaaS__Allow_for_Editing__c.field-meta.xml
<CustomField>
    <fullName>CnP_PaaS__Allow_for_Editing__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Allow for Editing</label>
    <type>Checkbox</type>
</CustomField>