ShakeCharity/ShakeSharityApp/force-app/main/default/objects/CnP_PaaS__Invoice__c/fields/CnP_PaaS__C_P_Transaction__c.field-meta.xml
<CustomField>
    <fullName>CnP_PaaS__C_P_Transaction__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>C&amp;P Transaction</label>
    <referenceTo>CnP_PaaS__CnP_Transaction__c</referenceTo>
    <relationshipLabel>C&amp;P Invoice</relationshipLabel>
    <relationshipName>C_P_Invoice</relationshipName>
    <type>Lookup</type>
</CustomField>