ShakeCharity/ShakeSharityApp/force-app/main/default/objects/CnP_PaaS__Invoice__c/fields/CnP_PaaS__Campaign__c.field-meta.xml
<CustomField>
    <fullName>CnP_PaaS__Campaign__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Campaign</label>
    <referenceTo>Campaign</referenceTo>
    <relationshipLabel>C&amp;P Invoice</relationshipLabel>
    <relationshipName>CnP_Invoice</relationshipName>
    <type>Lookup</type>
</CustomField>