ShakeCharity/ShakeSharityApp/force-app/main/default/objects/CnP_PaaS__Invoice__c/fields/CnP_PaaS__Campaign_Text__c.field-meta.xml
<CustomField>
    <fullName>CnP_PaaS__Campaign_Text__c</fullName>
    <label>Campaign Text</label>
    <length>255</length>
    <type>Text</type>
</CustomField>