ShakeCharity/ShakeSharityApp/force-app/main/default/objects/CnP_PaaS__Invoice__c/fields/CnP_PaaS__Country__c.field-meta.xml
<CustomField>
    <fullName>CnP_PaaS__Country__c</fullName>
    <label>Contact Billing Country</label>
    <length>255</length>
    <type>Text</type>
</CustomField>