ShakeCharity/ShakeSharityApp/force-app/main/default/objects/CnP_PaaS__Invoice__c/fields/CnP_PaaS__Invoice_Account_GUID__c.field-meta.xml
<CustomField>
    <fullName>CnP_PaaS__Invoice_Account_GUID__c</fullName>
    <label>Invoice Account GUID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>