ShakeCharity/ShakeSharityApp/force-app/main/default/objects/CnP_PaaS__Invoice__c/fields/CnP_PaaS__Invoice_Check__c.field-meta.xml
<CustomField>
    <fullName>CnP_PaaS__Invoice_Check__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Invoice Check</label>
    <type>Checkbox</type>
</CustomField>