ShakeCharity/ShakeSharityApp/force-app/main/default/objects/CnP_PaaS__Invoice__c/fields/CnP_PaaS__Invoice_Contact__c.field-meta.xml
<CustomField>
    <fullName>CnP_PaaS__Invoice_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>C&amp;P Invoice</relationshipLabel>
    <relationshipName>C_P_Invoice</relationshipName>
    <type>Lookup</type>
</CustomField>