ShakeCharity/ShakeSharityApp/force-app/main/default/objects/CnP_PaaS__Invoice__c/fields/CnP_PaaS__invoicedate__c.field-meta.xml
<CustomField>
    <fullName>CnP_PaaS__invoicedate__c</fullName>
    <label>invoicedate</label>
    <type>Date</type>
</CustomField>