ShakeCharity/ShakeSharityApp/force-app/main/default/objects/CnP_PaaS__Invoice__c/fields/CnP_PaaS__Organization_Information__c.field-meta.xml
<CustomField>
    <fullName>CnP_PaaS__Organization_Information__c</fullName>
    <label>Organization Information</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>