ShakeCharity/ShakeSharityApp/force-app/main/default/objects/CnP_PaaS__Invoice__c/fields/CnP_PaaS__Send_Receipt__c.field-meta.xml
<CustomField>
    <fullName>CnP_PaaS__Send_Receipt__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Send Receipt</label>
    <type>Checkbox</type>
</CustomField>