ShakeCharity/ShakeSharityApp/force-app/main/default/objects/CnP_PaaS__Invoice__c/fields/CnP_PaaS__sent_date__c.field-meta.xml
<CustomField>
    <fullName>CnP_PaaS__sent_date__c</fullName>
    <label>sent date</label>
    <type>Date</type>
</CustomField>