ShakeCharity/ShakeSharityApp/force-app/main/default/objects/CnP_PaaS__Invoice__c/fields/CnP_PaaS__sent_status__c.field-meta.xml
<CustomField>
    <fullName>CnP_PaaS__sent_status__c</fullName>
    <label>sent status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>