ShakeCharity/ShakeSharityApp/force-app/main/default/objects/CnP_PaaS__Invoice__c/fields/CnP_PaaS__shipcity__c.field-meta.xml
<CustomField>
    <fullName>CnP_PaaS__shipcity__c</fullName>
    <label>Contact Shipping City</label>
    <length>255</length>
    <type>Text</type>
</CustomField>