ShakeCharity/ShakeSharityApp/force-app/main/default/objects/CnP_PaaS__Invoice__c/fields/CnP_PaaS__Shipcode__c.field-meta.xml
<CustomField>
    <fullName>CnP_PaaS__Shipcode__c</fullName>
    <label>Contact Shipping Zip/Postal Code</label>
    <length>20</length>
    <type>Text</type>
</CustomField>