ShakeCharity/ShakeSharityApp/force-app/main/default/objects/CnP_PaaS__Invoice__c/fields/CnP_PaaS__shipping__c.field-meta.xml
<CustomField>
    <fullName>CnP_PaaS__shipping__c</fullName>
    <label>shipping</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>