ShakeCharity/ShakeSharityApp/force-app/main/default/objects/CnP_PaaS__Invoice__c/fields/CnP_PaaS__Shipping_Email__c.field-meta.xml
<CustomField>
    <fullName>CnP_PaaS__Shipping_Email__c</fullName>
    <label>Contact Shipping Email</label>
    <type>Email</type>
</CustomField>