ShakeCharity/ShakeSharityApp/force-app/main/default/objects/CnP_PaaS__Invoice__c/fields/CnP_PaaS__shipState__c.field-meta.xml
<CustomField>
    <fullName>CnP_PaaS__shipState__c</fullName>
    <label>Contact Shipping State</label>
    <length>200</length>
    <type>Text</type>
</CustomField>