ShakeCharity/ShakeSharityApp/force-app/main/default/objects/CnP_PaaS__Invoice__c/fields/CnP_PaaS__State__c.field-meta.xml
<CustomField>
    <fullName>CnP_PaaS__State__c</fullName>
    <label>Contact Billing State</label>
    <length>200</length>
    <type>Text</type>
</CustomField>