ShakeCharity/ShakeSharityApp/force-app/main/default/objects/CnP_PaaS__Invoice__c/fields/CnP_PaaS__td_Date__c.field-meta.xml
<CustomField>
    <fullName>CnP_PaaS__td_Date__c</fullName>
    <label>Transaction Date</label>
    <type>Date</type>
</CustomField>