ShakeCharity/ShakeSharityApp/force-app/main/default/objects/CnP_PaaS__Invoice__c/fields/CnP_PaaS__Tracker__c.field-meta.xml
<CustomField>
    <fullName>CnP_PaaS__Tracker__c</fullName>
    <label>Tracker</label>
    <length>255</length>
    <type>Text</type>
</CustomField>