ShakeCharity/ShakeSharityApp/force-app/main/default/objects/CnP_PaaS__Invoice__c/fields/CnP_PaaS__WebTemplate__c.field-meta.xml
<CustomField>
    <fullName>CnP_PaaS__WebTemplate__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Web Template</label>
    <referenceTo>CnP_PaaS__CnP_Designer__c</referenceTo>
    <relationshipLabel>C&amp;P Invoice (Web Template)</relationshipLabel>
    <relationshipName>C_P_Invoice1</relationshipName>
    <type>Lookup</type>
</CustomField>