ShakeCharity/ShakeSharityApp/force-app/main/default/objects/CnP_PaaS__Invoice__c/fields/CnP_PaaS__Zip_Code__c.field-meta.xml
<CustomField>
    <fullName>CnP_PaaS__Zip_Code__c</fullName>
    <label>Contact Billing Zip/Postal Code</label>
    <length>20</length>
    <type>Text</type>
</CustomField>